[gd_scene load_steps=5 format=3 uid="uid://cauaaqd2su05j"]

[ext_resource type="PackedScene" uid="uid://bavjk131m66or" path="res://scenes/users_and_moduls/moduls/character_block.tscn" id="1_ovaqb"]
[ext_resource type="Script" uid="uid://dhe0ypheyis40" path="res://scenes/users_and_moduls/moduls/char_block_admin.gd" id="2_b8p7b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ock0w"]
bg_color = Color(0.823529, 0.737255, 0.670588, 1)
corner_radius_top_right = 15
corner_radius_bottom_right = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sbmxo"]
bg_color = Color(0.913725, 0.866667, 0.831373, 1)
corner_radius_top_right = 15
corner_radius_bottom_right = 15

[node name="char_block_admin" instance=ExtResource("1_ovaqb")]
script = ExtResource("2_b8p7b")

[node name="main" parent="." index="0"]
visible = false

[node name="players_selection" type="VBoxContainer" parent="main" index="1"]
layout_mode = 2

[node name="update_btn" type="Button" parent="side_btns" index="1"]
visible = false
custom_minimum_size = Vector2(45, 75)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ock0w")
theme_override_styles/hover = SubResource("StyleBoxFlat_ock0w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sbmxo")
theme_override_styles/normal = SubResource("StyleBoxFlat_sbmxo")
toggle_mode = true
text = "â­¯"

[connection signal="pressed" from="side_btns/update_btn" to="." method="_on_update_btn_pressed"]
